Fix CSS for avoid initial body high bigger than window high and having a useless scrollbar.

--- a/less/zynthian.less
+++ b/less/zynthian.less
@@ -8,7 +8,7 @@
 
 html,
 body {
-	height: 100%;
+	/*height: 100%;*/
 	background-color: @bg1;
 }
 
